--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "NODE_ENV=test_jest jest --verbose --detectOpenHandles"
   },
   "author": "",
