--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,5 +24,8 @@
     "function-paren-newline": "off",
     "no-underscore-dangle": "off",
     "import/extensions": ["error", "always"]
+  },
+  "globals": {
+    "loggedJSON": "writable"
   }
 }
