--- a/package.json
+++ b/package.json
@@ -12,20 +12,29 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "7.20.2",
+    "babel-jest": "29.4.3",
     "eslint": "8.34.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.27.5",
     "jest": "29.4.3",
-    "nodemon": "2.0.20"
+    "nodemon": "2.0.20",
+    "supertest": "6.3.3"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "5.1.0",
     "cors": "2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "16.0.3",
     "ejs": "3.1.8",
     "express": "4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "9.0.0",
     "morgan": "1.10.0",
     "pg": "8.9.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   }
 }
