--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@babel/preset-env": "7.20.2",
     "babel-jest": "29.4.3",
-    "babel-plugin-transform-import-meta": "^2.2.0",
+    "babel-plugin-transform-import-meta": "2.2.0",
     "eslint": "8.34.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.27.5",
