Create script to update title and description

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "import/extensions": ["error", "always"]
   },
   "globals": {
-    "loggedJSON": "writable"
+    "loggedJSON": "writable",
+    "taskId": "writable"
   }
 }
