--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "NODE_ENV=test_jest jest --verbose --detectOpenHandles"
+    "dev": "NODE_ENV=dev nodemon src/server.js",
+    "test": "NODE_ENV=dev jest --verbose --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
